force-app/main/default/objects/Documentation_Request__c/Documentation_Request__c.object-meta.xml
<CustomObject>
    <description>Stores generated documentation requests and results.</description>
    <label>Documentation Request</label>
    <nameField>
        <displayFormat>DR-{00000}</displayFormat>
        <label>Documentation Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentation Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>