force-app/main/default/objects/Documentation_Request__c/fields/Business_Summary__c.field-meta.xml
<CustomField>
    <fullName>Business_Summary__c</fullName>
    <label>Business Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>