force-app/main/default/objects/Documentation_Request__c/fields/Request_Key__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>Request_Key__c</fullName>
    <label>Request Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>