force-app/main/default/objects/Documentation_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>