force-app/main/default/objects/Documentation_Request__c/fields/Technical_Summary__c.field-meta.xml
<CustomField>
    <fullName>Technical_Summary__c</fullName>
    <label>Technical Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>